[gd_scene load_steps=4 format=3 uid="uid://r1jdi0eveocl"]

[ext_resource type="Script" path="res://scenes/manager/enemy_manager.gd" id="1_ds3rj"]
[ext_resource type="Script" path="res://scenes/manager/PositionComponent.gd" id="3_ca8q5"]
[ext_resource type="PackedScene" uid="uid://bvruyx74t1pbc" path="res://scenes/component/enemy_marker_p.tscn" id="4_0cqag"]

[node name="EnemyManager" type="Node2D"]
script = ExtResource("1_ds3rj")

[node name="Respawner" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PositionComponent" type="Node2D" parent="."]
position = Vector2(43, 91)
script = ExtResource("3_ca8q5")

[node name="EnemyMarkerP2" parent="PositionComponent" instance=ExtResource("4_0cqag")]
position = Vector2(23, 104)
unit_position = 2

[node name="EnemyMarkerP4" parent="PositionComponent" instance=ExtResource("4_0cqag")]
position = Vector2(413, 108)
unit_position = 4

[node name="EnemyMarkerP1" parent="PositionComponent" instance=ExtResource("4_0cqag")]
position = Vector2(281, 106)
unit_position = 1

[node name="EnemyMarkerP3" parent="PositionComponent" instance=ExtResource("4_0cqag")]
position = Vector2(153, 107)
unit_position = 3

[node name="EnemyPlaceHolder" type="Node" parent="."]
